--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Casa de Câmbio Avengers</title>
 </head>
 <body>
 
@@ -13,7 +13,7 @@
 	<main class="main-section">
 		<div>
 			<label for="currency-input">Digite a moeda:</label>
-			<input type="text" id="currency-input">
+			<input type="text" name="currency" id="currency-input">
 		</div>
 
 		<button id="search-button">Pesquisar</button>
